# enDJIN

./: .gitattributes  .gitignore  Actor.cpp  Actor.h  ActorState.cpp  CMakeLists.txt  CMakePresets.json  ConfigParser.cpp  ConfigParser.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameScreen.cpp  GameScreen.h  Item.cpp  Item.h  LICENSE  Level.h  Makefile  Makefile.common  Makefile.header  Makefile.linux  Makefile.osx  Makefile.win  Monster.cpp  Monster.h  Player.cpp  Player.h  README.md  SplashScreen.cpp  SplashScreen.h  TileMap.cpp  TileMap.h  ToDoList.txt  Use Cases.odt  enDJIN.cpp  index.json
Data/: actors.json  gamescreens.json  index.json
Data/Config/: config.json
Data/Entities/: entities.json
Data/Entities/Actors/: actors.json
Data/Entities/Actors/Goblin/: goblin.json
Data/Entities/Actors/Player/: player.json  player.xcf
Data/Entities/Actors/TankBot/: tankbot.json
Data/Entities/Actors/WilloWarlock/: willowarlock.json
Data/Entities/Statics/: statics.json
Data/GameScreens/: gamescreens.json
Data/Tiles/: tiles.json
Data/Worlds/: Worlds.json
Data/Worlds/World1/: Level1.json  Level2.json
Data/Worlds/World2/: Level2.json
Data/Worlds/World3/: Level1.json  Level3.json  Level4.json
Data/Worlds/World4/: Level3.json  Level4.json
Engine/: ConfigParser.cpp  ConfigParser.h  DataParser.cpp  DataParser.h  Game.cpp  Game.h  GameScreen.cpp  GameScreen.h  GameScreenFactory.cpp  GameScreenFactory.h  KeyMappings.cpp  KeyMappings.h  Level.cpp  Level.h  Makefile.engine  SplashScreen.cpp  SplashScreen.h  Tile.h  Types.h
Engine/GameScreens/: GameScreen.cpp  GameScreen.h  GameScreenFactory.cpp  GameScreenFactory.h  Makefile.gamescreens  MenuScreen.cpp  MenuScreen.h  SplashScreen.cpp  SplashScreen.h
Entities/: Entity.h  IStateMachine.cpp  IStateMachine.h  Makefile.entities
Entities/Actors/: Actor.cpp  Actor.h  ActorState.h  Monster.h  MonsterFactory.cpp  MonsterFactory.h  MonsterStateFactory.cpp  MonsterStateFactory.h  Player.cpp  Player.h
Entities/Statics/: Item.h
Tiles/: StaticTiledMap.cpp  TileLoader.cpp  TileLoader.h
Util/: FileName.cpp  FileName.h  Log.h  Makefile.util
old_src/: CMakeLists.txt  Makefile  Makefile.header  Makefile.linux  Makefile.osx  Makefile.win
old_src/Engine/: CMakeLists.txt  ConfigParser.h  Engine.h  EventProcessor.cpp  KeyMappings.cpp  Level.h  TileEngine.h  TileMap.cpp  TileMap.h
old_src/Engine/Audio/: Audio.h  AudioEngine.cpp  Makefile.audio
old_src/Engine/Events/: CMakeLists.txt  Event.cpp  Event.h  EventHandler.h  EventTriggerHandler.h  Events.h  Makefile.events
old_src/Engine/GameScreens/: GameScreen.h  GameScreenFactory.h  LoadingScreen.cpp  LoadingScreen.h  Makefile.gamescreens  MenuScreen.cpp  MenuScreen.h  PlayScreen.h  SplashScreen.h
old_src/Entities/Actors/: Player.h
old_src/Entities/Actors/Armors/: Armor.cpp
old_src/Entities/Actors/Attacks/: Attack.h
old_src/Entities/Statics/: Item.cpp  Makefile.statics
old_src/Util/: CMakeLists.txt  Util.h
old_src/Util/Log/: CMakeLists.txt
old_src/Util/Types/: BitFields.h  CMakeLists.txt  Defines.h
src/: CMakeLists.txt  Makefile.footer  Makefile.header  Makefile.linux  Makefile.msys2  Makefile.src  Makefile.win  enDJIN.cpp
src/Engine/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  DataParser.cpp  DataParser.h  Engine.h  EventProcessor.cpp  EventProcessor.h  Game.cpp  Game.h  KeyMappings.cpp  KeyMappings.h  Level.cpp  Level.h  Makefile.engine  Tile.cpp  TileEngine.cpp  TileEngine.h  TileMap.cpp  TileMap.h
src/Engine/Audio/: Audio.h  AudioEngine.cpp  AudioEngine.h  AudioEventHandler.cpp  AudioEventHandler.h  CMakeLists.txt
src/Engine/Events/: CMakeLists.txt  Event.cpp  Event.h  EventHandler.cpp  EventHandler.h  EventTriggerHandler.cpp  EventTriggerHandler.h  Events.h  Makefile.events
src/Engine/GameScreens/: CMakeLists.txt  GameScreen.cpp  GameScreen.h  GameScreenFactory.cpp  GameScreenFactory.h  GameScreens.h  LoadingScreen.cpp  LoadingScreen.h  MenuScreen.cpp  MenuScreen.h  PlayScreen.cpp  PlayScreen.h  SplashScreen.cpp
src/Entities/: Entities.h  Entity.cpp  Entity.h
src/Entities/Actors/: Actor.cpp  Actor.h  Actors.h  Makefile.actors  Monster.cpp  Monster.h  MonsterFactory.h  Player.cpp  Player.h
src/Entities/Actors/Armors/: Armor.cpp  Armor.h  Armors.h  Makefile.armors
src/Entities/Actors/ArmorsAttacks/: Armor.cpp  Armor.h  Armors.h  Attack.cpp  Attack.h  Makefile.armors
src/Entities/Actors/Attacks/: Attack.cpp  Attack.h  Makefile.attacks
src/Entities/Attacks/: Attack.cpp  Attack.h
src/Entities/Statics/: Item.h  Statics.h
src/ResManagement/: Makefile.resources  Repository.cpp  ResourceManagement.h
src/ResourceManagement/: Repository.cpp  Repository.h  ResourceManagement.h
src/Resources/: Repository.cpp  Repository.h  ResourceManagement.h
src/Tiles/: StaticTiledMap.cpp  StaticTiledMap.h  TileLoader.cpp  TileLoader.h
src/Util/: CMakeLists.txt  Util.h
src/Util/Log/: Log.h
src/Util/Types/: BitFields.h  CMakeLists.txt  Defines.h  FunctionPointers.h  Types.h  Versatypes.cpp  Versatypes.h
src/cmake/Modules/: FindSFML.cmake
